Fix layout height bug
Change vh to svh units for body element

Add height fallback for old browsers

Add min height to fix layout issue of aside element

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ body {
     sans-serif;
   font-weight: normal;
   height: 100vh;
+  height: 100svh;
 }
 
 .wrapper {
@@ -61,6 +62,7 @@ main {
   justify-content: flex-start;
   gap: 2rem;
   max-width: 60vw;
+  height: 100%;
   flex-direction: column;
   flex-grow: 1;
   background-color: #f9fafb;
@@ -84,6 +86,7 @@ aside {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 700px;
   flex-basis: max(400px, 40vw);
   background: no-repeat url(assets/banner-img.jpg);
   background-size: cover;
